# KWL

./: .gitignore  .gitnore  LICENSE  README.md  estimation_profile.prof  main.py  package-lock.json  pyproject.toml  requirements.txt  temp_analysis.py  test_behavior_init.py  test_large_sample_streaming.py  test_streaming_louis.py  tree.txt  ztest.py
config/: __init__.py  model_config.py
data/: adjacent.py  data_geo.py  data_loader.py  data_person.py  data_region.py  distance.py  entropy.xlsx  geo.xlsx  linguistic.json  linguistic.py  method_entropy.py  move_add.tex  prov_language.csv  subsample.py
data_handling/: distance.py  linguistic.py
docs/: KW2011_experience.md  MODEL_CONFIG_GUIDE.md  completion_report.md  example_outputs_system.md  figure_paths.md  final_chart_comparison.md  plot_requirements.md  progress_tracking_usage.md
estimation/: model_estimator.py
file/: distance_matrix.csv  moved.tex  pca.xlsx  prov_code_ranked.json  prov_language.csv  prov_name_ranked.json
function/: adjacent.py  calK.py  compare_vec.py  dataRC.py  data_geo.py  data_readgeo.py  descriptive.py  distance.py  houseprice.py  indicator.py  linguistic.py  linguistic_tree.py  llh_individual.py  llh_individual_ds.py  llh_log_sample.py  llh_log_sample_ds.py  llh_person.py  method_entropy.py  method_pca.py  nelder_mead1.py  optimal.py  std.py  tradition.py
model/: dynamic_model.py  dynamic_programming.py  individual_likelihood.py  llh_individual.py  llh_individual_ds.py  migration_parameters.py  model_config.py  visited.py
optimization/: nelder_mead.py  newton_line_search.py  (+1 more)
(+216 files in other folders)
