[project]
name = "kwl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "factor-analyzer>=0.5.1",
    "flask>=3.1.2",
    "geopy>=2.4.1",
    "graphviz>=0.21",
    "joblib>=1.5.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.5",
    "mesa>=3.2.0",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "psutil>=6.1.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.0",
    "snakeviz>=2.2.2",
    "torch>=2.7.1",
    "Flask>=2.0.0",
    "numba>=0.62.1",
    "numdifftools>=0.9.41",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
